--- a/css/styles.css
+++ b/css/styles.css
@@ -372,10 +372,7 @@ a {
 .modal-title {
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;
     text-align: center;
-    letter-spacing: 0.03em;
-    padding: 40px;
     margin-bottom: 12px;
     color: var(--text-main-color);
 
@@ -389,13 +386,16 @@ a {
     width: 100%;
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
+    border-radius: 5px;
     background-color: transparent;
-    padding-left: 50px;
+    margin-bottom: 10px;
+    padding-left: 30px;
+    font-size: 12px;
+    color: var(--text-main-color);
 }
 .modal-icon{
     position: absolute;
-    left: 12px;
+    left: 5px;
     top: 50%;
     transform: translateY(-50%);
 }
@@ -404,13 +404,15 @@ a {
     display: block;
     position: relative;
     color: var(--grey);
+    margin-bottom: 4px;
+}
+.input-label span{
+   display: block; 
+   margin-bottom: 4px;
 }
 
 .modal-input::placeholder {
-    font-weight: 400;
     font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
     color: var(--grey);
 }
 
@@ -424,6 +426,7 @@ a {
     position: absolute;
     top: 50%;
     left: 50%;
+    padding: 40px;
     transform: translate(-50%, -50%);
     transition-duration: 1s;
     transition-timing-function: ease-in-out;
