--- a/css/styles.css
+++ b/css/styles.css
@@ -377,7 +377,8 @@ a {
     color: var(--text-main-color);
 
 }
-.input-wrapper{
+
+.input-wrapper {
     position: relative;
     margin-bottom: 10px;
 }
@@ -388,27 +389,56 @@ a {
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 5px;
     background-color: transparent;
-    margin-bottom: 10px;
+
     padding-left: 30px;
     font-size: 12px;
     color: var(--text-main-color);
 }
-.modal-icon{
+
+.modal-icon {
     position: absolute;
     left: 5px;
     top: 50%;
     transform: translateY(-50%);
 }
-.input-label{
+
+.modal-input:hover,
+.modal-input:focus {
+    border-color: var(--blue);
+}
+
+.modal-input:focus+.modal-icon {
+    fill: var(--blue);
+}
+
+.modal-comment {
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    resize: none;
+}
+.modal-comment:hover,
+.modal-comment:focus{
+    border-color: var(--blue);
+}
+.checkbox{
+    width: 16px;
+    height: 15px;
+}
+
+
+.input-label {
     font-size: 12px;
     display: block;
     position: relative;
     color: var(--grey);
     margin-bottom: 4px;
 }
-.input-label span{
-   display: block; 
-   margin-bottom: 4px;
+
+.input-label span {
+    display: block;
+    margin-bottom: 4px;
 }
 
 .modal-input::placeholder {
