--- a/css/styles.css
+++ b/css/styles.css
@@ -345,21 +345,15 @@ a {
     color: rgba(255, 255, 255, 0.6);
 }
 
-.subsription-button {}
-
-.subsription-button.main {
+.subsription-button {
     min-width: 200px;
+    height: 50px;
+    color: var(--white);
     margin-left: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
     background: var(--blue);
-}
-
-.subsription-button.click {
-    height: 50px;
-    color: var(--white);
-    background-color: var(--blue);
     padding: 10px 28px;
     font-weight: 700;
     font-size: 16px;
@@ -368,10 +362,8 @@ a {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     transition: background-color var(--trans-n-250), box-shadow var(--trans-n-250);
-
-
-
 }
+
 
 .icon-send {
     width: 24px;
