--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ a {
 .btn-round {
     border: none;
     border-radius: 4px;
-    
+
 }
 
 .btn-blue {
@@ -294,15 +294,7 @@ a {
 }
 
 
-
-
-
-
-
-
-
-
-/* -----------Підпишиться---на---сторінку------ */
+/* --------footer---Підпишиться---на---сторінку------ */
 
 .subscription-title {
     font-weight: 700;
@@ -339,7 +331,7 @@ a {
 
 }
 
-.placeholder {
+.footer-input::placeholder {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.25;
@@ -349,7 +341,7 @@ a {
     color: rgba(255, 255, 255, 0.6);
 }
 
-.subsription-button  {
+.subsription-button {
     min-width: 200px;
     height: 50px;
     color: var(--white);
@@ -367,13 +359,14 @@ a {
 
 }
 
-
 .icon-send {
     width: 24px;
     height: 24px;
     margin-left: 10px;
     fill: var(--white);
 }
+
+
 
 
 
@@ -448,6 +441,7 @@ a {
 }
 
 .modal-title {
+    display: block;
     font-weight: 700;
     font-size: 20px;
     text-align: center;
@@ -458,6 +452,7 @@ a {
 
 .input-wrapper {
     position: relative;
+    margin-top: 4px;
 
 }
 
@@ -467,7 +462,7 @@ a {
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 5px;
     background-color: transparent;
-    margin-top: 4px;
+
     padding-left: 30px;
     font-size: 12px;
     color: var(--text-main-color);
@@ -485,7 +480,7 @@ a {
     border-color: var(--blue);
 }
 
-.modal-input:focus+.modal-icon {
+.modal-input:focus + .modal-icon {
     fill: var(--blue);
 }
 
@@ -495,7 +490,6 @@ a {
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     resize: none;
-    margin-top: 4px;
     padding: 16px;
 }
 
@@ -504,60 +498,80 @@ a {
     border-color: var(--blue);
 }
 
+
+
+/* ---------------CHECKBOX---------------------- */
+
 .checkbox-text {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    padding-left: 11px;
-    margin-bottom: 30px;
-    color: var(--grey);
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-
-
-}
-
-.checkbox-text span {
-    width: 16px;
-    height: 15px;
-    margin-right: 10px;
+    background: var(--white);
     display: flex;
     align-items: center;
     justify-content: center;
-    background: var(--white);
-    border: 0.2px solid var(--text-main-color);
-    fill: transparent;
+    cursor: pointer;
+    padding-left: 11px;
+    margin-bottom: 30px;
+    /* border: 2px solid var(--text-main-color);
+        border-radius: 2px; */
+       
+}
 
+/* .checkbox-text span {
+    
+    margin-right: 10px;
+    align-items: center;
+    justify-content: center;
+    
+    
+} */
+
+/* .input-checkbox {
+    position: relative;
+} */
+
+.modal-check:checked + .checkbox-icon {
+    background-color: var(--blue);
+    border-color: transparent;
+    
+}
+
+.modal-check {
+    position: absolute;
+    appearance: none;
+}
+.checkbox-agreement-text{
+   margin-left: 8px;
+   margin-right: 8px; 
 }
 
 .checkbox-icon {
     display: inline-block;
     width: 16px;
     height: 15px;
-    border: 2px solid var(--text-main-color);
-    border-radius: 2px;
+    color: var(--white);
     cursor: pointer;
+    border: 2px solid var(--blue);
+    transition: color var(--trans-n-250), background-color var(--trans-n-250);
 }
 
 .agreement-link {
-    padding-left: 8px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    text-decoration-line: underline;
+    position: relative;
+    display: block;
     color: var(--blue);
-
+    text-decoration: none;
 }
-
-
-
-.modal-check:checked+.checkbox-text span {
+.agreement-link::after{
+    position: absolute;
+    content: '';
+    bottom: 3px;
+    left: 0;
+    width: 100%;
+    height: 1px;
     background-color: var(--blue);
-    border: none;
-    fill: var(--white);
 }
+
 
 .modal-send {
     font-size: 16px;
@@ -577,6 +591,7 @@ a {
     cursor: pointer;
 
 }
+
 
 .input-label {
     font-size: 12px;
@@ -637,6 +652,6 @@ a {
     fill: var(--blue);
 }
 
-..close-button-icon {
+.close-button-icon {
     fill: currentColor;
 }
